@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 13:24:12 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 13:26:02 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -158,5 +158,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>小說家最初以為諾貝爾獎是假新聞。我記得那天晚上，得知韓國小說家韓江獲諾貝爾獎的消息時，我最初以為是假新聞。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 13:24:12 +0800</pubDate>
+</item><item>
+  <title>諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌</title>
+  <link>https://www.famechos.me/news/諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌.html</link>
+  <description>韓江：諾貝爾文學獎得主，探索暴力、美麗和人類韌性的交匯點。。韓國作家韓江是2024年諾貝爾文學獎得主，她以獨特的詩意和實驗性的寫作風格，探索了暴力、死亡等普遍的人類主題。。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 13:26:02 +0800</pubDate>
 </item></channel>
 </rss>
