@@ -1,0 +1,280 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f97\u4e3b\u97d3\u6c5f\uff1a\u66b4\u529b\u3001\u7f8e\u9e97\u548c\u4eba\u985e\u97cc\u6027\u7684\u4ea4\u532f\u9ede\uff0c\u5beb\u4e0b\u6b77\u53f2\u5275\u50b7\u4e2d\u7684\u751f\u547d\u4e4b\u6b4c", "description": "\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f97\u4e3b\u97d3\u6c5f\uff1a\u66b4\u529b\u3001\u7f8e\u9e97\u548c\u4eba\u985e\u97cc\u6027\u7684\u4ea4\u532f\u9ede\uff0c\u5beb\u4e0b\u6b77\u53f2\u5275\u50b7\u4e2d\u7684\u751f\u547d\u4e4b\u6b4c", "url": "https://www.famechos.me/news/\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f97\u4e3b\u97d3\u6c5f\uff1a\u66b4\u529b\u3001\u7f8e\u9e97\u548c\u4eba\u985e\u97cc\u6027\u7684\u4ea4\u532f\u9ede\uff0c\u5beb\u4e0b\u6b77\u53f2\u5275\u50b7\u4e2d\u7684\u751f\u547d\u4e4b\u6b4c.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T13:25:49.821908+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌.html"/>
+<meta name="description" content="諾貝爾文學獎得主韓江的作品：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌。探索人類的韌性和生命力的文學旅程。">
+
+<meta name="keywords" content="諾貝爾文學獎, 韓江, 暴力, 美麗, 人類韌性, 歷史創傷, 生命之歌, 文學作品, 韌性, 生命力">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌.html" />
+        <meta property="og:title" content="諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌" />
+        <meta property="og:description" content="諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌" />
+        <meta property="twitter:description" content="諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>韓國作家韓江是2024年諾貝爾文學獎得主，她以獨特的詩意和實驗性的寫作風格，探索了暴力、死亡等普遍的人類主題。</p>
+<p>在她的小說《我們不分離》（2021）中，韓江描繪了1948年濟州島平民大屠殺的悲劇。透過三個女性的視角，展現了歷史創傷中脆弱卻堅韌的人類生命。</p>
+<p>濟州四·三事件是1948年4月3日，濟州島民眾抗議美國軍事統治的事件。當時政府錯誤地將其標籤為共產主義叛亂，導致數萬名平民死亡。</p>
+<p>小說的主角鄭心，看似脆弱和悲傷，但她從未停止過哀傷和告別。韓江曾說，鄭心的決心是書的核心，象徵著在悲慘的歷史情況下的人類韌性和毅力。</p>
+<p>韓江曾分享了一個改變她人生的經歷：她小時候看了一本關於1980年光州民主化運動受害者的照片集。這一刻，她開始問一些關於人性的基本問題。她的探索幫助她塑造了《素食者》。</p>
+<p>韓江致力於探索一個暴力和美麗共存的世界。“人們冒著生命危險去救一個掉在鐵軌上的孩子，但同時也會犯下奧斯威辛集中營那樣的暴行，”她曾說。這兩種人性的極端激發了她的文學之旅，暴力成為她作品中的一個中心和反覆出現的主題。</p>
+<p>在《人類行為》（2014）中，韓江進一步探索了這個主題。小說講述了一個男孩在光州學生起義後尋找朋友屍體的故事，同時也在思考暴力和美麗不可分割的世界中生命的可能性。韓江表示，寫作是一個探索自我和尋找答案的旅程。雖然這個過程有時很痛苦和具有挑戰性，但她努力讓自己沉浸在其中，盡可能長的時間。</p>
+<p>她的下一個項目可能會更個人化，因為她曾暗示過想在寫了一系列以歷史事件為中心的小說後，探索更多個人化的主題。這本書將在1月份以英文出版。</p>
+<p>韓江在1993年以詩人身份出道。她說：“我已經受夠了《我們不分離》中的寒冷，我希望春天來臨。”她想發展活著的理念，並寫關於春天的故事。</p>
+<p>最近，她一直在思考活著的意義。她們被賦予這個一次性的生命，不管她們喜不喜歡，都必須最終歸還它。以下是她對生命意義的反思：</p>
+<ul>
+<li>生命的意義是什麼？</li>
+<li>我們如何珍惜這個一次性的生命？</li>
+<li>如何在生活中找到春天的希望？</li>
+</ul>
+<p>她希望通過寫作來探索這些問題，並找到答案。</p>
+<h2>韓國女歌手扈賢珠粉絲遭遇攻擊事件</h2>
+<p>韓國女歌手扈賢珠的粉絲在要求合照時遭遇攻擊。這起事件引起了廣泛關注。</p>
+<h2>朝鮮領導人胞妹發出威脅：再有韓國無人機入侵將釀成災難</h2>
+<p>朝鮮領導人胞妹警告，若再發現韓國無人機將引發災難。這一聲明令韓國政府提高了警惕。</p>
+<h2>韓國再遭朝鮮發射20個垃圾氣球</h2>
+<p>朝鮮再次向韓國發射20個垃圾氣球，韓國參謀長聯席會議（JCS）透露。這一行動被視為挑釁行為。</p>
+<h2>韓國無人機飛越平壤，朝鮮媒體進行了相關報導</h2>
+<p>朝鮮媒體報導稱韓國無人機飛越平壤。這一消息引起了外界關注。</p>
+<h2>預計於2024年底召開韓美日峰會</h2>
+<p>韓國國家安全顧問表示，韓美日峰會預計2024年底舉行。這一會議將討論地區安全問題。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/T1MyvY6aimM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生.html">文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我.html">韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文壇新星！首位諾貝爾文學獎得主韓江：寫下韓國現代史的傷痛與溫暖.html">韓國文壇新星！首位諾貝爾文學獎得主韓江：寫下韓國現代史的傷痛與溫暖</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
