@@ -194,4 +194,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/諾貝爾文學獎得主韓江：暴力、美麗和人類韌性的交匯點，寫下歷史創傷中的生命之歌.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T13:26:02+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
